--- a/doca_theme/src/sass/components/image-with-caption/_image-with-caption.scss
+++ b/doca_theme/src/sass/components/image-with-caption/_image-with-caption.scss
@@ -59,6 +59,12 @@
         display: inline;
       }
     }
+    &.no-url {
+      display: none;
+      @include breakpoint($medium) {
+        display: block;
+      }
+    }
     @include breakpoint($medium) {
       font-style: normal;
       padding: 0.25rem 1rem;
